--- a/gk.bib
+++ b/gk.bib
@@ -80,13 +80,14 @@
 }
 
 @article{Bin83,
-    author  = {David A. Binder},
-    title   = {On the Variance of Asymptoticaly Normal Estimators from Complex Surveys},
-    year    = {1983},
-    journal = {International Statistical Review},
-    volume  = {51},
-    number  = {3},
-    pages   = {279--292}
+  author =       {David A. Binder},
+  title =        {On the Variance of Asymptoticaly Normal Estimators
+                  from Complex Surveys},
+  year =         {1983},
+  journal =      {International Statistical Review},
+  volume =       {51},
+  number =       {3},
+  pages =        {279--292}
 }
 
 @article{HorTho52,
@@ -110,16 +111,14 @@
 }
 
 @misc{AbaImb05,
-  author =	 {Alberto Abadie and Guido Imbens},
-  title =	 {Estimation of the Conditional Variance in Paired
+  author =       {Alberto Abadie and Guido Imbens},
+  title =        {Estimation of the Conditional Variance in Paired
                   Experiments},
-  year =	 2006,
+  year =         2006,
   howpublished = {KSG Working Paper},
   note =
                   {{http://ksghome.harvard.edu/\~{}.aabadie.academic.ksg/cve.pdf}}
 }
-
-
 
 @article{LeeLesStu2011,
 author = {Lee, Brian K. and Lessler, Justin and Stuart, Elizabeth A.},
@@ -153,13 +152,14 @@ howpublished = {NBER}
 
 
 @article{Imb00,
-  author =	 {Guido Imbens},
-  title =	 {The role of the propensity score in estimating the dose-response functions},
-  year =	 {2000},
-  journal = {Biometrika},
-  pages = {706--710},
-  volume = {87},
-  issue = {3}
+  author =       {Guido Imbens},
+  title =        {The role of the propensity score in estimating the
+                  dose-response functions},
+  year =         {2000},
+  journal =      {Biometrika},
+  pages =        {706--710},
+  volume =       {87},
+  issue =        {3}
 }
 
 @article{AbaImb07b,
@@ -185,181 +185,194 @@ howpublished = {NBER}
 
 
 @inproceedings{Abu-Mostafa92,
-	author={Y. Abu-Mostafa},
-	title={A Method for Learning from Hints},
-	booktitle={Advances in Neural information processings systems 5},
-	year={1992},
-	publisher={Morgan Kaufmann Publishers},
-	address={San Mateo, CA},
-	editor={S. J. Hanson and Jack D. Cowan and C. Lee Giles}
+  author =       {Y. Abu-Mostafa},
+  title =        {A Method for Learning from Hints},
+  booktitle =    {Advances in Neural information processings systems
+                  5},
+  year =         {1992},
+  publisher =    {Morgan Kaufmann Publishers},
+  address =      {San Mateo, CA},
+  editor =       {S. J. Hanson and Jack D. Cowan and C. Lee Giles}
 }
 
 @article{Abu-Mostafa92,
-	author={Y. Abu-Mostafa},
-	title={A Method for Learning from Hints},
-	journal={Advances in Neural information processings systems 5},
-	volume={1992},
-	pages={Morgan Kaufmann Publishers},
-	month={San Mateo CA},
-	number={S. J. Hanson and Jack D. Cowan and C. Lee Giles}
+  author =       {Y. Abu-Mostafa},
+  title =        {A Method for Learning from Hints},
+  journal =      {Advances in Neural information processings systems
+                  5},
+  volume =       {1992},
+  pages =        {Morgan Kaufmann Publishers},
+  month =        {San Mateo CA},
+  number =       {S. J. Hanson and Jack D. Cowan and C. Lee Giles}
 }
 
 @book{Achen86,
-	author={Christopher Achen},
-	title={Statistical Analysis of Quasi-experiments},
-	publisher={University of California Press},
-	year={1986},
-	address={Berkeley}
+  author =       {Christopher Achen},
+  title =        {Statistical Analysis of Quasi-experiments},
+  publisher =    {University of California Press},
+  year =         {1986},
+  address =      {Berkeley}
 }
 
 @techreport{AdaCoaRue00,
-	author={Michelle Adato and David Coady and Marie Ruel},
-	title={An Operations Evaluation of Progresa from the Perspective of Beneficiaries,
-		Promotoras, School Directors and Health Staff},
-	institution={International Food Policy Research Institute},
-	year={2000},
-	month={August},
-	type={Final Report},
-	address={2033 K Street, NW Washington, DC 20006}
+  author =       {Michelle Adato and David Coady and Marie Ruel},
+  title =        {An Operations Evaluation of Progresa from the
+                  Perspective of Beneficiaries, Promotoras, School
+                  Directors and Health Staff},
+  institution =  {International Food Policy Research Institute},
+  year =         {2000},
+  month =        {August},
+  type =         {Final Report},
+  address =      {2033 K Street, NW Washington, DC 20006}
 }
 
 @article{AdaGla05,
-	author={Adamic, L.A. and Glance, N.},
-	title={{The political blogosphere and the 2004 US election: divided they blog}},
-	journal={Proceedings of the 3rd international workshop on Link discovery},
-	year={2005},
-	pages={36--43},
-	publisher={ACM Press New York, NY, USA}
+  author =       {Adamic, L.A. and Glance, N.},
+  title =        {{The political blogosphere and the 2004 US election:
+                  divided they blog}},
+  journal =      {Proceedings of the 3rd international workshop on
+                  Link discovery},
+  year =         {2005},
+  pages =        {36--43},
+  publisher =    {ACM Press New York, NY, USA}
 }
 
 @article{AgoDyn04,
-	author={Roberto Agodini and Mark Dynarski},
-	title={Are experiments the only option? {A} look at dropout prevention programs},
-	journal={Review of Economics and Statistics},
-	volume= 86,
-	year= 2004,
-	pages={180-194},
-	month={February},
-	number= 1
+  author =       {Roberto Agodini and Mark Dynarski},
+  title =        {Are experiments the only option? {A} look at dropout
+                  prevention programs},
+  journal =      {Review of Economics and Statistics},
+  volume =       86,
+  year =         2004,
+  pages =        {180-194},
+  month =        {February},
+  number =       1
 }
 
 @article{AgrSri94,
-	author={Rakesh Agrawal and Ramakrishnan Srikant},
-	title={Fast Algorithms for Mining Association Rules},
-	journal={Proceedings of the 20th VLDB Conference},
-	year={1994},
-	pages={487-499},
+  author =       {Rakesh Agrawal and Ramakrishnan Srikant},
+  title =        {Fast Algorithms for Mining Association Rules},
+  journal =      {Proceedings of the 20th VLDB Conference},
+  year =         {1994},
+  pages =        {487-499},
 }
 
 @unpublished{AgrRajSri03,
-	author={Rakesh Agrawal and Sridhar Rajagopolan and Ramakrishnan Srikant and Yirong
-		Xu},
-	title={Mining Newsgroups Using Networks Arising from Social Behavior},
-	note={IBM ALmaden Research Center 650 Harry Rd., San Jose, CA 95120},
-	year={2003},
-	month={May}
+  author =       {Rakesh Agrawal and Sridhar Rajagopolan and
+                  Ramakrishnan Srikant and Yirong Xu},
+  title =        {Mining Newsgroups Using Networks Arising from Social
+                  Behavior},
+  note =         {IBM ALmaden Research Center 650 Harry Rd., San Jose,
+                  CA 95120},
+  year =         {2003},
+  month =        {May}
 }
 
 @book{Aitchison86,
-	author={J. Aitchison},
-	title={The Statistical Analysis of Compositional Data},
-	publisher={Chapman and Hall},
-	year= 1986,
-	address={London}
+  author =       {J. Aitchison},
+  title =        {The Statistical Analysis of Compositional Data},
+  publisher =    {Chapman and Hall},
+  year =         1986,
+  address =      {London}
 }
 
 @article{Albert88,
-	author={James H. Albert},
-	title={Computational Methods Using a Bayesian Hierarchical Generalized Linear Model},
-	journal={Journal of the American Statistical Association},
-	volume={83},
-	year={1988},
-	pages={1037-1004},
-	month={December},
-	number={404}
+  author =       {James H. Albert},
+  title =        {Computational Methods Using a Bayesian Hierarchical
+                  Generalized Linear Model},
+  journal =      {Journal of the American Statistical Association},
+  volume =       {83},
+  year =         {1988},
+  pages =        {1037-1004},
+  month =        {December},
+  number =       {404}
 }
 
 @article{AldMcK77,
-	author={John H. Aldrich and Richard D. McKelvey},
-	title={A Method of Scaling With Applications to the 1968 and 1972 Presidential
-		Elections},
-	journal= apsr,
-	volume= 71,
-	year= 1977,
-	pages={111-130},
-	month={March}
+  author =       {John H. Aldrich and Richard D. McKelvey},
+  title =        {A Method of Scaling With Applications to the 1968
+                  and 1972 Presidential Elections},
+  journal =      apsr,
+  volume =       71,
+  year =         1977,
+  pages =        {111-130},
+  month =        {March}
 }
 
 @article{AleTab90,
-	author={Alberto Alesina and Guido Tabellini},
-	title={A Positive Theory of Fiscal Deficits and Government Debt},
-	journal={The Review of Economic Studies},
-	volume={57},
-	year={1990},
-	pages={403-414},
-	month={July},
-	number={3}
+  author =       {Alberto Alesina and Guido Tabellini},
+  title =        {A Positive Theory of Fiscal Deficits and Government
+                  Debt},
+  journal =      {The Review of Economic Studies},
+  volume =       {57},
+  year =         {1990},
+  pages =        {403-414},
+  month =        {July},
+  number =       {3}
 }
 
 @article{Alho00,
-	author={J. M. Alho},
-	title={Discussion},
-	journal={North American Actuarial Journal},
-	volume= 4,
-	year= 2000,
-	pages={91--93},
-	number= 1
+  author =       {J. M. Alho},
+  title =        {Discussion},
+  journal =      {North American Actuarial Journal},
+  volume =       4,
+  year =         2000,
+  pages =        {91--93},
+  number =       1
 }
 
 @article{Alho92,
-	author={J. M. Alho},
-	title={{Comment on ``Modeling and Forecasting U.S. Mortality'' by R. Lee and L.
-		Carter}},
-	journal= jasa,
-	volume= 87,
-	year= 1992,
-	pages={673--674},
-	month={September},
-	number= 419
+  author =       {J. M. Alho},
+  title =        {{Comment on ``Modeling and Forecasting U.S.
+                  Mortality'' by R. Lee and L. Carter}},
+  journal =      jasa,
+  volume =       87,
+  year =         1992,
+  pages =        {673--674},
+  month =        {September},
+  number =       419
 }
 
 @article{AlSaCr76,
-	author={James Alt and Bo Sarlvik and Ivor Crewe},
-	title={Individual Differences Scaling and Group Attitude Structures: British Party
-		Imagery in 1974},
-	journal={Quality and Quantity},
-	volume= 10,
-	year= 1976,
-	pages={297--320},
-	month={October}
+  author =       {James Alt and Bo Sarlvik and Ivor Crewe},
+  title =        {Individual Differences Scaling and Group Attitude
+                  Structures: British Party Imagery in 1974},
+  journal =      {Quality and Quantity},
+  volume =       10,
+  year =         1976,
+  pages =        {297--320},
+  month =        {October}
 }
 
 @book{AltGilMcD03,
-	author={Micah Altman and Jeff Gill and Michael P. McDonald},
-	title={Numerical Issues in Statistical Computing for the Social Scientist},
-	publisher={John Wiley and Sons},
-	year= 2003,
-	address={New York}
+  author =       {Micah Altman and Jeff Gill and Michael P. McDonald},
+  title =        {Numerical Issues in Statistical Computing for the
+                  Social Scientist},
+  publisher =    {John Wiley and Sons},
+  year =         2003,
+  address =      {New York}
 }
 
 @article{Altman85,
-	author={Douglas G. Altman},
-	title={Comparability of Randomised Groups},
-	journal={The Statistician},
-	volume={34},
-	year={1985},
-	pages={125-136},
-	number={1}
+  author =       {Douglas G. Altman},
+  title =        {Comparability of Randomised Groups},
+  journal =      {The Statistician},
+  volume =       {34},
+  year =         {1985},
+  pages =        {125-136},
+  number =       {1}
 }
 
 @article{Altman98,
-	author={Douglas G. Altman and Jonathan J. Deeks and David L. Sackett},
-	title={Odds Ratios Should be Avoided When Events are Common},
-	journal={British Medical Journal},
-	volume= 317,
-	year= 1998,
-	pages= 1318,
-	month={Nov. 7}
+  author =       {Douglas G. Altman and Jonathan J. Deeks and David L.
+                  Sackett},
+  title =        {Odds Ratios Should be Avoided When Events are
+                  Common},
+  journal =      {British Medical Journal},
+  volume =       317,
+  year =         1998,
+  pages =        1318,
+  month =        {Nov. 7}
 }
 
 @article{AltMcD03,
