--- a/gk.bib
+++ b/gk.bib
@@ -24010,3 +24010,14 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2000},
   publisher =    {LWW}
 }
+@article{Sitjtsma09,
+  title =        {On the use, the misuse, and the very limited
+                  usefulness of Cronbach’s alpha},
+  author =       {Sijtsma, Klaas},
+  journal =      {Psychometrika},
+  volume =       {74},
+  number =       {1},
+  pages =        {107--120},
+  year =         {2009},
+  publisher =    {Springer}
+}
