--- a/gk.bib
+++ b/gk.bib
@@ -1190,13 +1190,13 @@ howpublished = {NBER}
 }
 
 
-@book{ImbRub10,
-	author={Guido Imbens and Donald Rubin},
-	title={Causal Inference},
-	year= {2010},
-	note={Unpublished manuscript}
+@book{ImbRub15,
+  author =       {Guido Imbens and Donald Rubin},
+  title =        {Causal Inference for Statistics, Social, and
+                  Biomedical Sciences An Introduction},
+  year =         {2015},
+  publisher =    {Cambridge University Press}
 }
-
 
 @article{Bernstein32,
 	author={F. Bernstein},
