--- a/gk.bib
+++ b/gk.bib
@@ -24021,3 +24021,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2009},
   publisher =    {Springer}
 }
+@article{GolMin13,
+  title={Distributive politics around the world},
+  author={Golden, Miriam and Min, Brian},
+  journal={Annual Review of Political Science},
+  volume={16},
+  pages={73--99},
+  year={2013},
+  publisher={Annual Reviews}
+}
