--- a/gk.bib
+++ b/gk.bib
@@ -24021,3 +24021,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2009},
   publisher =    {Springer}
 }
+@Book{GwaWagYaz05,
+  editor =       {Gwatkin, Davidson R. and Wagstaff, Adam and Yazbeck,
+                  Abdo S.},
+  title =        {Reaching the Poor},
+  publisher =    {The World Bank},
+  year =         2005,
+  address =      {Washington, D.C.},
+  note =         {j.mp/reachpoor}
+}
