--- a/gk.bib
+++ b/gk.bib
@@ -13998,14 +13998,6 @@ pages={706-719}
 	number= 1
 }
 
-@book{GwaWagYaz05,
-	title={Reaching the Poor},
-	publisher={The World Bank},
-	year= 2005,
-	editor={Davidson R. Gwatkin and Adam Wagstaff and Adbo S. Yazbeck},
-	address={Washington, D.C.}
-}
-
 @book{wdr04,
 	title={Making Services Work for Poor People: World Development Report, 2004},
 	publisher={Oxford University Press and the World Bank},
@@ -24021,14 +24013,14 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2009},
   publisher =    {Springer}
 }
+
 @Book{GwaWagYaz05,
-  editor =       {Gwatkin, Davidson R. and Wagstaff, Adam and Yazbeck,
-                  Abdo S.},
+  editor =       {Davidson R. Gwatkin and Adam Wagstaff and Abdo S. Yazbeck},
   title =        {Reaching the Poor},
   publisher =    {The World Bank},
   year =         2005,
   address =      {Washington, D.C.},
-  note =         {j.mp/reachpoor}
+  note =         {\url{j.mp/reachpoor}}
 }
 @article{GolMin13,
   title =        {Distributive politics around the world},
