--- a/gk.bib
+++ b/gk.bib
@@ -24040,3 +24040,15 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher =    {Annual Reviews}
 }
 
+@Article{BalBha15,
+  author =       {Kate Baldwin and Rikhil R. Bhavnani},
+  title =        {Ancillary Studies of Experiments: Opportunities and
+                  Challenges},
+  journal =      {Journal of Globalization and Development},
+  year =         2015,
+  volume =       6,
+  number =       1,
+  pages =        {113-146},
+  month =        {March}
+}
+
