--- a/gk.bib
+++ b/gk.bib
@@ -914,14 +914,14 @@ howpublished = {NBER}
 }
 
 @techreport{BehTod99,
-	author={Jere R. Behrman and Petra E. Todd},
-	title={Randomness in the Experimental Samples of Progresa (Education, Health, and
-		Nutrition Program)},
-	institution={International Food Policy Research Institute},
-	year={1999},
-	month={March},
-	type={Research Report},
-	address={2033 K Street, NW Washington, DC 20006}
+  author =       {Jere R. Behrman and Petra E. Todd},
+  title =        {Randomness in the Experimental Samples of Progresa
+                  (Education, Health, and Nutrition Program)},
+  institution =  {International Food Policy Research Institute},
+  year =         {1999},
+  month =        {March},
+  type =         {Research Report},
+  address =      {2033 K Street, NW Washington, DC 20006}
 }
 
 @article{Bell97,
@@ -24043,4 +24043,42 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {113-146},
   month =        {March}
 }
+
+@article{GriSte13,
+  title =        {Text as data: The promise and pitfalls of automatic
+                  content analysis methods for political texts},
+  author =       {Grimmer, Justin and Stewart, Brandon M},
+  journal =      {Political Analysis},
+  year =         {2013}
+}
+@article{BenLavMik09,
+  title =        {Treating words as data with error: Uncertainty in
+                  text statements of policy positions},
+  author =       {Benoit, Kenneth and Laver, Michael and Mikhaylov,
+                  Slava},
+  journal =      {American Journal of Political Science},
+  volume =       {53},
+  number =       {2},
+  pages =        {495--513},
+  year =         {2009}
+}
+@article{RouAndGar01,
+  title =        {Methodological issues in the content analysis of
+                  computer conference transcripts},
+  author =       {Rourke, Liam and Anderson, Terry and Garrison, D
+                  Randy and Archer, Walter},
+  journal =      {International Journal of Artificial Intelligence in
+                  Education},
+  volume =       {12},
+  pages =        {8--22},
+  year =         {2001}
+}
+
+@Book{Krippendorf80,
+  author =    {K. Krippendorf},
+  title =        {Quantitative content analysis: An introduction to its method},
+  publisher =    {Sage},
+  year =         1980,
+  address =   {Beverly Hills}
+  }
 
