--- a/gk.bib
+++ b/gk.bib
@@ -24082,3 +24082,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   address =   {Beverly Hills}
   }
 
+@article{BanArd72,
+  title =        {Average nearest-neighbor distances between uniformly
+                  distributed finite particles},
+  author =       {Bansal, P.P. and Ardell, A.J.},
+  journal =      {Metallography},
+  volume =       {5},
+  number =       {2},
+  pages =        {97--111},
+  year =         {1972}
+}
