--- a/gk.bib
+++ b/gk.bib
@@ -1,4 +1,4 @@
-% A bibtex file for papers by or coauthored with Gary King
+% A bibtex file for papers by, or coauthored with, Gary King
 %
 % To add references, first please CHECK that your doesn't already
 %      exist in this file and
