--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -367,8 +367,8 @@ pages={1037--1060},
 }
 
 @article{KinGakIma09,
-  Author =	 {Gary King and Emmanuela Gakidou and Kosuke Imai and
-                  Jason Lakin and Ryan T. Moore and Clayton Nall and
+  Author =       {Gary King and Emmanuela Gakidou and Kosuke Imai and
+                  Jason Lakin and Clayton Nall and Ryan T. Moore and
                   Nirmala Ravishankar and Manett Vargas and Martha
                   Mar{\'i}a T{\'e}llez-Rojo and Juan Eugenio
                   Hern{\'a}ndez {\'A}vila and Mauricio Hern{\'a}ndez
@@ -376,11 +376,10 @@ pages={1037--1060},
   title =	 {Public Policy for the Poor? A Randomised Assessment
                   of the Mexican Universal Health Insurance Programme},
   journal =	 {The Lancet},
-  volumne =	 {373},
-  year =	 {2009},
-  note =	 {{http://gking.harvard.edu/files/abs/spi-abs.shtml}}
+  volumne =	 373,
+  year =	 2009,
+  note =	 {{http://j.mp/lgZF4R}}
 }
-
 
 @Article{KinSon11,
   author =       {Gary King and Samir Soneji},
@@ -525,30 +524,18 @@ pages={1037--1060},
 }
 
 @article{ImaKinNal09,
-  author =	 {Kosuke Imai and Gary King and Clayton Nall},
-  title =	 {The Essential Role of Pair Matching in
+  author =       {Kosuke Imai and Gary King and Clayton Nall},
+  title =        {The Essential Role of Pair Matching in
                   Cluster-Randomized Experiments, with Application to
                   the Mexican Universal Health Insurance Evaluation},
-  journal =	 {Statistical Science},
-  volume =	 {24},
-  number =	 {1},
-  pages =	 {29--53},
-  year =	 {2009},
-  note =
-                  {{http://gking.harvard.edu/files/abs/cluster-abs.shtml}}
+  journal =      {Statistical Science},
+  volume =       {24},
+  number =       {1},
+  pages =        {29--53},
+  year =         {2009},
+  note =         {{http://j.mp/kM8HoX}}
 }
 
-@article{uImaKinNal09,
-  author =	 {Kosuke Imai and Gary King and Clayton Nall},
-  title =	 {The Essential Role of Pair Matching in
-                  Cluster-Randomized Experiments, with Application to
-                  the Mexican Universal Health Insurance Evaluation},
-  journal =	 {Statistical Science},
-  volume =	 {24},
-  number =	 {1},
-  pages =	 {29--53},
-  year =	 {2009}
-}
 
 @article{King07,
   author =	 {Gary King},
@@ -599,7 +586,7 @@ pages={1037--1060},
   year =	 {2007},
   pages =	 {479-506},
   number =	 {3},
-  note =	 {{http://gking.harvard.edu/files/abs/spd-abs.shtml}}
+  note =	 {{http://j.mp/lXnta2}}
 }
 
 @article{KinWan07,
@@ -2010,20 +1997,20 @@ pages={1037--1060},
 
 
 @article{KinGakIma09b,
-  Author =	 {Gary King and Emmanuela Gakidou and Kosuke Imai and
+  Author =       {Gary King and Emmanuela Gakidou and Kosuke Imai and
                   Jason Lakin and Clayton Nall and Ryan T. Moore and
                   Nirmala Ravishankar and Manett Vargas and Martha
                   Mar{\'i}a T{\'e}llez-Rojo and Juan Eugenio
                   Hern{\'a}ndez {\'A}vila and Mauricio Hern{\'a}ndez
                   {\'A}vila and H{\'e}ctor Hern{\'a}ndez Llamas},
-  title =	 {Replication Data for: Public Policy for the Poor? A
+  title =        {Replication Data for: Public Policy for the Poor? A
                   Randomized Ten-Month Evaluation of the Mexican
                   Universal Health Insurance Program},
-  journal =	 { },
-  year =	 {2009},
-  note =	 {\underline{hdl:1902.1/11044}
-                  UNF:3:jeUN9XODtYUp2iUbe8gWZQ== Murray Research
-                  Archive [Distributor]}
+  journal =      { },
+  year =         {2009},
+  note =         {\underline{hdl:1902.1/11044}
+                  [UNF:3:jeUN9XODtYUp2iUbe8gWZQ==] Harvard Dataverse
+                  [Distributor]}
 }
 
 @article{ImaKinNal09c,
@@ -2039,15 +2026,15 @@ pages={1037--1060},
 }
 
 @article{ImaKinNal09b,
-  author =	 {Kosuke Imai and Gary King and Clayton Nall},
-  title =	 {Replication Data for: The Essential Role of Pair Matching in
-                  Cluster-Randomized Experiments, with Application to
-                  the Mexican Universal Health Insurance Evaluation},
-  journal =	 { },
-  year =	 {2009},
-  note =	 {\underline{hdl:1902.1/11047}
-                  UNF:3:jeUN9XODtYUp2iUbe8gWZQ== Murray Research
-                  Archive [Distributor]}
+  author =       {Kosuke Imai and Gary King and Clayton Nall},
+  title =        {Replication Data for: The Essential Role of Pair
+                  Matching in Cluster-Randomized Experiments, with
+                  Application to the Mexican Universal Health
+                  Insurance Evaluation},
+  journal =      { },
+  year =         {2009},
+  note =         {\underline{hdl:1902.1/11047}
+                  [UNF:3:jeUN9XODtYUp2iUbe8gWZQ==] Harvard Dataverse}
 }
 
 @Article{KinZen08,
