--- a/gk.bib
+++ b/gk.bib
@@ -2567,28 +2567,6 @@ howpublished = {NBER}
 	series={U.S.-Mexico contemporary Perspectives Series, 6}
 }
 
-@InCollection{Cornelius04,
-author = {Wayne A. Cornelius},
-title = {Mobilized Voting in the 2000 Elections: The Changing Efficacy of Vote Buying and Coercion in Mexican Electoral Politics},
-booktitle = {Mexico's Pivotal Democratic Election: Candidates, Voters, and the Presidential Campaign of 2000},
-OPTcrossref = {},
-OPTkey = {},
-OPTpages = {},
-publisher = {Stanford University Press},
-year = {2004},
-editor = {Jorge I. Dom\'{i}nguez and Chappell Lawson},
-OPTvolume = {},
-OPTnumber = {},
-OPTseries = {},
-OPTtype = {},
-OPTchapter = {},
-address = {Stanford and La Jolla, CA},
-OPTedition = {},
-OPTmonth = {},
-OPTnote = {},
-OPTannote = {}
-}
-
 @article{Cornfield51,
 	author={Jerome Cornfield},
 	title={A Method of Estimating Comparative Rates from Clinical Data: Application
@@ -24091,3 +24069,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 	Title = {The application of social cost--benefit analysis to the evaluation of PROGRESA},
 	Type = {Final Report},
 	Year = {2000}}
+
+@incollection{Cornelius04,
+  author =	 {Cornelius, Wayne A.},
+  title =	 {{Mobilized Voting in the 2000 Elections: The Changing Efficacy of Vote Buying and Coercion in Mexican Electoral Politics}},
+  booktitle =	 {Mexico's Pivotal Democratic Election: Candidates, Voters, and the Presidential Election of 2000},
+  year =	 {2004},
+  editor =	 {Dominguez, Jorge I. and Lawson, Chappell},
+  pages =	 {47--65},
+  publisher =	 {Stanford University Press}
+}
