--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2034,7 +2034,7 @@ pages={1037--1060},
   journal =      { },
   year =         {2009},
   note =         {\underline{hdl:1902.1/11047}
-                  [UNF:3:jeUN9XODtYUp2iUbe8gWZQ==] Harvard Dataverse}
+                  [UNF:3:jeUN9XODtYUp2iUbe8gWZQ==] Harvard Dataverse [Distributor]}
 }
 
 @Article{KinZen08,
