--- a/gk.bib
+++ b/gk.bib
@@ -11641,10 +11641,10 @@ pages={706-719}
   year =	 {1991}
 }
 
-@proceedings{Skoufias05,
+@Misc{Skoufias05,
 	title={PROGRESA and Its Impacts on the Welfare of Rural Households in Mexico},
 	year={2005},
-	organization={International Food Policy Research Institute},
+	howpublished={International Food Policy Research Institute},
 	address={Washington},
 	author={E. Skoufias}
 }
