--- a/gk.bib
+++ b/gk.bib
@@ -24079,3 +24079,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =	 {47--65},
   publisher =	 {Stanford University Press}
 }
+
+@techreport{BlaEmeFia16,
+	Author = {Blattman, Chris and Emeriau, Mathilde and Fiala, Nathan},
+	Date-Added = {2016-01-13 18:50:39 +0000},
+	Date-Modified = {2016-01-13 18:57:43 +0000},
+	Institution = {Columbia University},
+	Month = {November},
+	Title = {Do employment programs buy votes? A field experiment in Uganda},
+	Type = {Working Paper},
+	Year = {2016}}
