--- a/gk.bib
+++ b/gk.bib
@@ -24085,7 +24085,17 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 	Date-Added = {2016-01-13 18:50:39 +0000},
 	Date-Modified = {2016-01-13 18:57:43 +0000},
 	Institution = {Columbia University},
-	Month = {November},
+	Month = {January},
 	Title = {Do employment programs buy votes? A field experiment in Uganda},
 	Type = {Working Paper},
 	Year = {2016}}
+
+@techreport{LarMarTru15,
+	Author = {Larreguy, Horacio and Marshall, John and Trucco, Laura},
+	Date-Added = {2016-01-13 18:50:39 +0000},
+	Date-Modified = {2016-01-13 18:57:43 +0000},
+	Institution = {Harvard University},
+	Month = {November},
+	Title = {Breaking Clientelism or Rewarding Incumbents? Evidence from an Urban Titling Program in Mexico},
+	Type = {Working Paper},
+	Year = {2015}}
