--- a/gk.bib
+++ b/gk.bib
@@ -24053,49 +24053,70 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @Book{Krippendorf80,
-  author =    {K. Krippendorf},
-  title =        {Quantitative content analysis: An introduction to its method},
+  author =       {K. Krippendorf},
+  title =        {Quantitative content analysis: An introduction to
+                  its method},
   publisher =    {Sage},
   year =         1980,
-  address =   {Beverly Hills}
-  }
+  address =      {Beverly Hills}
+}
 
 @techreport{Coady00,
-	Author = {David Coady},
-	Date-Added = {2016-01-13 18:50:39 +0000},
-	Date-Modified = {2016-01-13 18:57:43 +0000},
-	Institution = {International Food Policy Research Institute},
-	Month = {November},
-	Title = {The application of social cost--benefit analysis to the evaluation of PROGRESA},
-	Type = {Final Report},
-	Year = {2000}}
+  Author =       {David Coady},
+  Date-Added =   {2016-01-13 18:50:39 +0000},
+  Date-Modified ={2016-01-13 18:57:43 +0000},
+  Institution =  {International Food Policy Research Institute},
+  Month =        {November},
+  Title =        {The application of social cost--benefit analysis to
+                  the evaluation of PROGRESA},
+  Type =         {Final Report},
+  Year =         {2000}
+}
 
 @incollection{Cornelius04,
-  author =	 {Cornelius, Wayne A.},
-  title =	 {{Mobilized Voting in the 2000 Elections: The Changing Efficacy of Vote Buying and Coercion in Mexican Electoral Politics}},
-  booktitle =	 {Mexico's Pivotal Democratic Election: Candidates, Voters, and the Presidential Election of 2000},
-  year =	 {2004},
-  editor =	 {Dominguez, Jorge I. and Lawson, Chappell},
-  pages =	 {47--65},
-  publisher =	 {Stanford University Press}
+  author =       {Cornelius, Wayne A.},
+  title =        {{Mobilized Voting in the 2000 Elections: The
+                  Changing Efficacy of Vote Buying and Coercion in
+                  Mexican Electoral Politics}},
+  booktitle =    {Mexico's Pivotal Democratic Election: Candidates,
+                  Voters, and the Presidential Election of 2000},
+  year =         {2004},
+  editor =       {Dominguez, Jorge I. and Lawson, Chappell},
+  pages =        {47--65},
+  publisher =    {Stanford University Press}
 }
 
 @techreport{BlaEmeFia16,
-	Author = {Blattman, Chris and Emeriau, Mathilde and Fiala, Nathan},
-	Date-Added = {2016-01-13 18:50:39 +0000},
-	Date-Modified = {2016-01-13 18:57:43 +0000},
-	Institution = {Columbia University},
-	Month = {January},
-	Title = {Do employment programs buy votes? A field experiment in Uganda},
-	Type = {Working Paper},
-	Year = {2016}}
+  Author =       {Blattman, Chris and Emeriau, Mathilde and Fiala,
+                  Nathan},
+  Date-Added =   {2016-01-13 18:50:39 +0000},
+  Date-Modified ={2016-01-13 18:57:43 +0000},
+  Institution =  {Columbia University},
+  Month =        {January},
+  Title =        {Do employment programs buy votes? A field experiment
+                  in Uganda},
+  Type =         {Working Paper},
+  Year =         {2016}
+}
 
 @techreport{LarMarTru15,
-	Author = {Larreguy, Horacio and Marshall, John and Trucco, Laura},
-	Date-Added = {2016-01-13 18:50:39 +0000},
-	Date-Modified = {2016-01-13 18:57:43 +0000},
-	Institution = {Harvard University},
-	Month = {November},
-	Title = {Breaking Clientelism or Rewarding Incumbents? Evidence from an Urban Titling Program in Mexico},
-	Type = {Working Paper},
-	Year = {2015}}
+  Author =       {Larreguy, Horacio and Marshall, John and Trucco,
+                  Laura},
+  Institution =  {Harvard University},
+  Month =        {November},
+  Title =        {Breaking Clientelism or Rewarding Incumbents?
+                  Evidence from an Urban Titling Program in Mexico},
+  Type =         {Working Paper},
+  Year =         {2015}
+}
+@Article{BanArd72,
+  author =       {P.P. Bansal, A.J. Ardell},
+  title =        {Average nearest-neighbor distances between uniformly
+                  distributed finite particles},
+  journal =      {Metallography},
+  year =         1972,
+  volume =       5,
+  number =       2,
+  pages =        {97--111}
+}
+
