--- a/gk.bib
+++ b/gk.bib
@@ -24110,7 +24110,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   Year =         {2015}
 }
 @Article{BanArd72,
-  author =       {P.P. Bansal, A.J. Ardell},
+  author =       {P.P. Bansal and A.J. Ardell},
   title =        {Average nearest-neighbor distances between uniformly
                   distributed finite particles},
   journal =      {Metallography},
