Citations for 50c paper

--- a/gk.bib
+++ b/gk.bib
@@ -24120,3 +24120,175 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {97--111}
 }
 
+@article{Freedomhouse09,
+  title={China and the Internet: An Uphill Fight for Freedom},
+  author={{Freedom House}},
+  journal={Harvard International Review},
+  pages={68--73},
+  year={2009},
+  publisher={JSTOR}
+}
+
+@article{Calingaert10,
+  title={Authoritarianism vs. the Internet},
+  author={Calingaert, Daniel},
+  journal={Policy Review},
+  number={160},
+  pages={63},
+  year={2010},
+  publisher={Hoover Institute}
+}
+
+@article{DeiRoh10,
+  title={Liberation vs. control: The future of cyberspace},
+  author={Deibert, Ronald and Rohozinski, Rafal},
+  journal={Journal of Democracy},
+  volume={21},
+  number={4},
+  pages={43--57},
+  year={2010},
+  publisher={The Johns Hopkins University Press}
+}
+
+@article{Bremmer10,
+  title={Democracy in Cyberspace},
+  author={Bremmer, Ian},
+  journal={Foreign Affairs},
+  volume={89},
+  number={6},
+  pages={86--92},
+  year={2010}
+}
+
+@article{Barr12,
+  title={Nation branding as nation building: China’s image campaign},
+  author={Barr, Michael},
+  journal={East Asia},
+  volume={29},
+  number={1},
+  pages={81--94},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{Greitens13,
+  title={Authoritarianism Online: What Can We Learn from Internet Data in Nondemocracies?},
+  author={Greitens, Sheena Chestnut},
+  journal={PS: Political Science \& Politics},
+  volume={46},
+  number={02},
+  pages={262--270},
+  year={2013},
+  publisher={Cambridge Univ Press}
+}
+
+@article{Hassid12,
+  title={Safety valve or pressure cooker? Blogs in Chinese political life},
+  author={Hassid, Jonathan},
+  journal={Journal of Communication},
+  volume={62},
+  number={2},
+  pages={212--230},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{TonLei13,
+  title={War of position and microblogging in China},
+  author={Tong, Yanqi and Lei, Shaohua},
+  journal={Journal of Contemporary China},
+  volume={22},
+  number={80},
+  pages={292--311},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@book{Morozov12,
+  title={The net delusion: The dark side of Internet freedom},
+  author={Morozov, Evgeny},
+  year={2012},
+  publisher={PublicAffairs}
+}
+
+@article{Keating11,
+  title={China's `50-cent' party takes on the jasmine revolutions},
+  author={Joshua Keating},
+  journal={Foreign Policy},
+  volume ={March},
+  year={2011},
+}
+
+@article{Bandurski08,
+  title={China's guerrilla war for the web},
+  author={Bandurski, David},
+  journal={Far Eastern Economic Review},
+  volume={171},
+  number={6},
+  pages={41},
+  year={2008},
+  publisher={REVIEW PUBLISHING COMPANY LIMITED}
+}
+
+@article{Lam12,
+  title={China: Challenging the 50 Cent Party},
+  author={Oiwan Lam},
+  journal={Global Voices},
+  volume ={March},
+  year={2012},
+}
+
+@article{StrBer15,
+  title={“Twitter Bodhisattva”: Ai Weiwei’s Media Politics},
+  author={Strafella, Giorgio and Berg, Daria},
+  journal={Asian Studies Review},
+  volume={39},
+  number={1},
+  pages={138--157},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+
+@article{Haley10,
+  title={China's Fifty Cent Party for Internet Propaganda},
+  author={Usha Haley},
+  journal={Huffington Post},
+  volume ={October 4},
+  year={2010},
+}
+
+@misc{ChinaDigitalTimes50c,
+  title={Fifty cents},
+  author={{China Digital Times}},
+  howpublished={http://chinadigitaltimes.net/space/Fifty\_cents},
+}
+
+@article{Lam13,
+  title={China Beefs Up `50 Cent' Army of Paid Internet Propagandists},
+  author={Oiwan Lam},
+  journal={Global Voices},
+  volume ={October},
+  year={2013},
+}
+
+@article{Elgan09,
+  title={How China's `50 Cent Army' Could Wreck Web 2.0},
+  author={Mike Elgan},
+  journal={Datamation},
+  volume ={January 9},
+  year={2009},
+}
+
+@misc{Ng11,
+  title={Wu Mao},
+  author={Jason Ng},
+  howpublished={Blocked on Weibo},
+  year={2011},
+}
+
+@misc{Economist13,
+  title={Cat and mouse: How China makes sure its internet abides by the rules},
+  journal={The Economist},
+  volume ={April 6},
+  year={2013},
+}
