--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2444,3 +2444,14 @@ pages={1037--1060},
   author =	 {Gary King and Jennifer Pan and Margaret E. Roberts},
   note ={{ http://j.mp/LdVXqN}}
 }
+@article {,
+  title =        {Reverse-engineering censorship in China: Randomized
+                  experimentation and participant observation},
+  journal =      {Science},
+  volume =       {345},
+  number =       {6199},
+  year =         {2014},
+  pages =        {1-10},
+  note =         {http://j.mp/1KbwkJJ},
+  author =       {Gary King and Jennifer Pan and Margaret E. Roberts}
+}
