--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2444,7 +2444,7 @@ pages={1037--1060},
   author =	 {Gary King and Jennifer Pan and Margaret E. Roberts},
   note ={{ http://j.mp/LdVXqN}}
 }
-@article {,
+@article {KinPanRob14,
   title =        {Reverse-engineering censorship in China: Randomized
                   experimentation and participant observation},
   journal =      {Science},
