--- a/gk.bib
+++ b/gk.bib
@@ -24257,10 +24257,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2010},
 }
 
-@misc{ChinaDigitalTimes50c,
-  title={Fifty cents},
-  author={{China Digital Times}},
-  howpublished={http://chinadigitaltimes.net/space/Fifty\_cents},
+@article{ChinaDigitalTimes50c,
+  author =       {Editors},
+  title =        {Fifty cents},
+  year =         2016,
+  journal =      {China Digital Times},
+  note =         {http://j.mp/cdt50cent},
 }
 
 @article{Lam13,
@@ -24276,19 +24278,41 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author={Mike Elgan},
   journal={Datamation},
   volume ={January 9},
-  year={2009},
+  year={2009}
 }
 
-@misc{Ng11,
+@article{Ng11,
   title={Wu Mao},
   author={Jason Ng},
-  howpublished={Blocked on Weibo},
-  year={2011},
+  journal={`Blocked on Weibo' blog},
+  month={16 November},
+  year={2011}
 }
 
-@misc{Economist13,
-  title={Cat and mouse: How China makes sure its internet abides by the rules},
-  journal={The Economist},
-  volume ={April 6},
-  year={2013},
+@article{Economist13,
+  author =       {Editors},
+  title =        {Cat and mouse: How China makes sure its internet
+                  abides by the rules},
+  journal =      {The Economist},
+  volume =       {April 6},
+  year =         2013
 }
+@Article{Henochowicz14,
+  author =       {Anne Henochowicz},
+  title =        {Thousands of Local Internet Propaganda Emails
+                  Leaked},
+  journal =      {China Digital Times},
+  year =         2014,
+  month =        {3 December},
+  note =         {http://j.mp/leakedEmails}
+}
+@Article{Philipp15,
+  author =       {Joshua Philipp},
+  title =        {Leaked Emails Show Chinese Regime Employs 500,000
+                  Internet Trolls},
+  journal =      {Epoch Times},
+  year =         2015,
+  month =        {15 December},
+  note =         {http://j.mp/twomill}
+}
+
