--- a/gk.bib
+++ b/gk.bib
@@ -24205,56 +24205,56 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @book{Morozov12,
-  title={The net delusion: The dark side of Internet freedom},
-  author={Morozov, Evgeny},
-  year={2012},
-  publisher={PublicAffairs}
+  title =        {The net delusion: The dark side of Internet freedom},
+  author =       {Morozov, Evgeny},
+  year =         {2012},
+  publisher =    {PublicAffairs}
 }
 
 @article{Keating11,
-  title={China's `50-cent' party takes on the jasmine revolutions},
-  author={Joshua Keating},
-  journal={Foreign Policy},
-  volume ={March},
-  year={2011},
+  title =        {China's `50-cent' party takes on the jasmine
+                  revolutions},
+  author =       {Joshua Keating},
+  journal =      {Foreign Policy},
+  volume =       {March},
+  year =         {2011},
 }
 
 @article{Bandurski08,
-  title={China's guerrilla war for the web},
-  author={Bandurski, David},
-  journal={Far Eastern Economic Review},
-  volume={171},
-  number={6},
-  pages={41},
-  year={2008},
-  publisher={REVIEW PUBLISHING COMPANY LIMITED}
+  title =        {China's guerrilla war for the web},
+  author =       {Bandurski, David},
+  journal =      {Far Eastern Economic Review},
+  volume =       {171},
+  number =       {6},
+  pages =        {41},
+  year =         {2008}
 }
 
 @article{Lam12,
-  title={China: Challenging the 50 Cent Party},
-  author={Oiwan Lam},
-  journal={Global Voices},
-  volume ={March},
-  year={2012},
+  title =        {China: Challenging the 50 Cent Party},
+  author =       {Oiwan Lam},
+  journal =      {Global Voices},
+  volume =       {March},
+  year =         {2012},
 }
 
 @article{StrBer15,
-  title={“Twitter Bodhisattva”: Ai Weiwei’s Media Politics},
-  author={Strafella, Giorgio and Berg, Daria},
-  journal={Asian Studies Review},
-  volume={39},
-  number={1},
-  pages={138--157},
-  year={2015},
-  publisher={Taylor \& Francis}
+  title =        {“Twitter Bodhisattva”: Ai Weiwei’s Media Politics},
+  author =       {Strafella, Giorgio and Berg, Daria},
+  journal =      {Asian Studies Review},
+  volume =       {39},
+  number =       {1},
+  pages =        {138--157},
+  year =         {2015},
+  publisher =    {Taylor \& Francis}
 }
 
 @article{Haley10,
-  title={China's Fifty Cent Party for Internet Propaganda},
-  author={Usha Haley},
-  journal={Huffington Post},
-  volume ={October 4},
-  year={2010},
+  title =        {China's Fifty Cent Party for Internet Propaganda},
+  author =       {Usha Haley},
+  journal =      {Huffington Post},
+  volume =       {October 4},
+  year =         {2010},
 }
 
 @article{ChinaDigitalTimes50c,
@@ -24266,27 +24266,28 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @article{Lam13,
-  title={China Beefs Up `50 Cent' Army of Paid Internet Propagandists},
-  author={Oiwan Lam},
-  journal={Global Voices},
-  volume ={October},
-  year={2013},
+  title =        {China Beefs Up `50 Cent' Army of Paid Internet
+                  Propagandists},
+  author =       {Oiwan Lam},
+  journal =      {Global Voices},
+  volume =       {October},
+  year =         {2013},
 }
 
 @article{Elgan09,
-  title={How China's `50 Cent Army' Could Wreck Web 2.0},
-  author={Mike Elgan},
-  journal={Datamation},
-  volume ={January 9},
-  year={2009}
+  title =        {How China's `50 Cent Army' Could Wreck Web 2.0},
+  author =       {Mike Elgan},
+  journal =      {Datamation},
+  volume =       {January 9},
+  year =         {2009}
 }
 
 @article{Ng11,
-  title={Wu Mao},
-  author={Jason Ng},
-  journal={`Blocked on Weibo' blog},
-  month={16 November},
-  year={2011}
+  title =        {Wu Mao},
+  author =       {Jason Ng},
+  journal =      {`Blocked on Weibo' blog},
+  month =        {16 November},
+  year =         {2011}
 }
 
 @article{Economist13,
