--- a/gk.bib
+++ b/gk.bib
@@ -24317,3 +24317,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   note =         {http://j.mp/twomill}
 }
 
+@Article{Sonnad14,
+  author =       {Nikhil Sonnad},
+  title =        {Hacked emails reveal China’s elaborate and absurd
+                  internet propaganda machine},
+  journal =      {Quartz},
+  year =         2014,
+  month =        {18 December},
+  note =         {http://j.mp/Sonnad}
+}
+
