--- a/gk.bib
+++ b/gk.bib
@@ -24287,6 +24287,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {Jason Ng},
   journal =      {`Blocked on Weibo' blog},
   month =        {16 November},
+  note =         {blockedonweibo.tumblr.com},
   year =         {2011}
 }
 
