added data cite

--- a/gk.bib
+++ b/gk.bib
@@ -79,6 +79,13 @@
   number =	 1
 }
 
+@article{frontierdata,  
+  author =	 {King, Gary and Lucas, Christopher and Nielsen, Richard},
+  title =	 {Replication Data for: The Balance-Sample Size Frontier in Matching Methods for Causal Inference},
+  journal =	 {Harvard Dataverse Project},
+  note =         "\url{https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi%3A10.7910%2FDVN%2FTRTXLP}"
+}
+
 @article{Bin83,
   author =       {David A. Binder},
   title =        {On the Variance of Asymptoticaly Normal Estimators
@@ -24051,6 +24058,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   journal =      {Political Analysis},
   year =         {2013}
 }
+
 @article{BenLavMik09,
   title =        {Treating words as data with error: Uncertainty in
                   text statements of policy positions},
@@ -24062,6 +24070,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {495--513},
   year =         {2009}
 }
+
 @article{RouAndGar01,
   title =        {Methodological issues in the content analysis of
                   computer conference transcripts},
