--- a/gk.bib
+++ b/gk.bib
@@ -83,6 +83,7 @@
   author =	 {King, Gary and Lucas, Christopher and Nielsen, Richard},
   title =	 {Replication Data for: The Balance-Sample Size Frontier in Matching Methods for Causal Inference},
   journal =	 {Harvard Dataverse Project},
+  year =         {2016},
   note =         "\url{https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi%3A10.7910%2FDVN%2FTRTXLP}"
 }
 
