--- a/gk.bib
+++ b/gk.bib
@@ -24338,3 +24338,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   note =         {http://j.mp/Sonnad}
 }
 
+@Article{Han15,
+  author =       {Rongbin Han},
+  title =        {Manufacturing Consent in Cyberspace: China’s ``Fifty-Cent Army"},
+  journal =      {Journal of Current Chinese Affairs},
+  year =         2015,
+  volumne =      {44},
+  number =       {2},
+  pages =        {105--134}
+}
