--- a/gk.bib
+++ b/gk.bib
@@ -24347,3 +24347,22 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   number =       {2},
   pages =        {105--134}
 }
+
+
+@article{cortes1995support,
+  title={Support-vector networks},
+  author={Cortes, Corinna and Vapnik, Vladimir},
+  journal={Machine learning},
+  volume={20},
+  number={3},
+  pages={273--297},
+  year={1995},
+  publisher={Springer}
+}
+
+@article{meyer2004support,
+  title={Support vector machines: The interface to libsvm in package e1071},
+  author={Meyer, David},
+  year={2004},
+  publisher={Citeseer}
+}
