--- a/gk.bib
+++ b/gk.bib
@@ -24366,3 +24366,10 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2004},
   publisher={Citeseer}
 }
+
+@article{roberts2015experiencing,
+  title={Experiencing Censorship Emboldens Internet Users and Decreases Government Support in China},
+  author={Roberts, M},
+  journal={Unpublished Working Paper, URL http://www. margaretroberts. net/wp-content/uploads/2015/07/fear. pdf},
+  year={2015}
+}
