--- a/gk.bib
+++ b/gk.bib
@@ -84,7 +84,7 @@
   title =	 {Replication Data for: The Balance-Sample Size Frontier in Matching Methods for Causal Inference},
   journal =	 {Harvard Dataverse Project},
   year =         {2016},
-  note =         "\url{https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi%3A10.7910%2FDVN%2FTRTXLP}"
+  note =         {DOI:10.7910/DVN/SURSEO"}
 }
 
 @article{Bin83,
